docs/0.18.1/_sources/api/gammapy.datasets.Datasets.rst.txt
Datasets
========

.. currentmodule:: gammapy.datasets

.. autoclass:: Datasets
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Datasets.energy_axes_are_aligned
      ~Datasets.energy_ranges
      ~Datasets.gti
      ~Datasets.is_all_same_energy_shape
      ~Datasets.is_all_same_shape
      ~Datasets.is_all_same_type
      ~Datasets.meta_table
      ~Datasets.models
      ~Datasets.names
      ~Datasets.parameters

   .. rubric:: Methods Summary

   .. autosummary::

      ~Datasets.append
      ~Datasets.clear
      ~Datasets.copy
      ~Datasets.count
      ~Datasets.extend
      ~Datasets.index
      ~Datasets.info_table
      ~Datasets.insert
      ~Datasets.pop
      ~Datasets.read
      ~Datasets.remove
      ~Datasets.reverse
      ~Datasets.select_time
      ~Datasets.slice_by_energy
      ~Datasets.stack_reduce
      ~Datasets.stat_sum
      ~Datasets.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: energy_axes_are_aligned
   .. autoattribute:: energy_ranges
   .. autoattribute:: gti
   .. autoattribute:: is_all_same_energy_shape
   .. autoattribute:: is_all_same_shape
   .. autoattribute:: is_all_same_type
   .. autoattribute:: meta_table
   .. autoattribute:: models
   .. autoattribute:: names
   .. autoattribute:: parameters

   .. rubric:: Methods Documentation

   .. automethod:: append
   .. automethod:: clear
   .. automethod:: copy
   .. automethod:: count
   .. automethod:: extend
   .. automethod:: index
   .. automethod:: info_table
   .. automethod:: insert
   .. automethod:: pop
   .. automethod:: read
   .. automethod:: remove
   .. automethod:: reverse
   .. automethod:: select_time
   .. automethod:: slice_by_energy
   .. automethod:: stack_reduce
   .. automethod:: stat_sum
   .. automethod:: write
